--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # main links
 main:
+  - title: "Posts by Category"
+    url: /categories/
   - title: "About"
     url: /about/
   - title: "Contact"
