--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "da
 locale                   : "en-US"
 title                    : "norrismw.github.io"
 title_separator          : "-"
-subtitle                 : "CCNA, OSCP, SLAE" # site tagline that appears below site title in masthead
+subtitle                 : #"CCNA, OSCP, SLAE" # site tagline that appears below site title in masthead
 name                     : "Michael Norris"
-description              : "I like computers and stuff."
+description              : # "Thoughts"
 url                      : "https://norrismw.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "norrismw/norrismw.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
