--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "da
 locale                   : "en-US"
 title                    : "norrismw.github.io"
 title_separator          : "-"
-subtitle                 : #"CCNA, OSCP, SLAE" # site tagline that appears below site title in masthead
+subtitle                 : "牛角掛書" # site tagline that appears below site title in masthead
 name                     : "Michael Norris"
 description              : # "Thoughts"
 url                      : "https://norrismw.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
