--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "da
 locale                   : "en-US"
 title                    : "norrismw.github.io"
 title_separator          : "-"
-subtitle                 : "牛角掛書" # site tagline that appears below site title in masthead
+subtitle                 : "a collection of work" # site tagline that appears below site title in masthead
 name                     : "Michael Norris"
 description              : # "Thoughts"
 url                      : "https://norrismw.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Michael Norris"
   avatar           : "/assets/images/wolfmoon.jpg"
-  bio              : "Never stop learning"
+  bio              : "牛角掛書| Be studious"
   location         : "Boulder, CO"
   email            : # "mwnorris89@gmail.com"
   links:
