--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://norrismw.github.io" # the base hostname & pr
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "norrismw/norrismw.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/qr.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/site/qr.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 250
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Michael Norris"
-  avatar           : "/assets/images/wolfmoon.jpg"
+  avatar           : "/assets/images/site/wolfmoon.jpg"
   bio              : "The doer alone learneth."
   location         : "Boulder, CO"
   email            : # "mwnorris89@gmail.com"
