--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,9 @@ locale                   : "en-US"
 title                    : "mnorris.io"
 title_separator          : "-"
 subtitle                 : "odds & ends" # site tagline that appears below site title in masthead
-name                     : "Michael Norris"
+name                     : "Michael W. Norris"
 description              : # "Thoughts"
-url                      : "https://mnorris.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : "https://mnorris.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io" baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "norrismw/mnorris.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/site/drop.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -107,9 +106,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Michael Norris"
+  name             : "Michael W. Norris"
   avatar           : "/assets/images/site/wolfmoon.jpg"
-  bio              : #"The doer alone learneth."
+  bio              : "CCNA | OSCP | SLAE32"
   location         : "Boulder, CO"
   email            : # "mwnorris89@gmail.com"
   links:
