--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "Michael W. Norris"
-  avatar           : "/assets/images/site/mnorris_avatar.png"
+  avatar           : "/assets/images/site/mnorris_avatar.jpg"
   bio              : "An average guy"
   location         : "Boulder, CO"
   email            : # "mwnorris89@gmail.com"
