--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Michael W. Norris"
   avatar           : "/assets/images/site/wolfmoon.jpg"
-  bio              : "An average guy"
+  bio              : "Archetypal computer nerd with a dash of personality."
   location         : "Boulder, CO"
   email            : # "mwnorris89@gmail.com"
   links:
