--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "Michael W. Norris"
-  avatar           : "/assets/images/site/bike_profile.png"
+  avatar           : "/assets/images/site/wolfmoon.jpg"
   bio              : "*Archetypal computer nerd with a pinch of personality.*"
   location         : "Boulder, CO"
   email            : # "info@mnorris.io"
