--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Michael W. Norris"
   avatar           : "/assets/images/site/bike_profile.jpg"
-  bio              : "*Standard computer nerd with an added pinch of personality.*"
+  bio              : "*An archetypal computer nerd with an added pinch of personality.*"
   location         : "Boulder, CO"
   email            : # "info@mnorris.io"
   links:
