--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   name             : "Michael W. Norris"
   avatar           : "/assets/images/site/bike_profile.jpg"
   bio              : "*An archetypal computer nerd with an added pinch of personality.*"
-  location         : "Boulder, CO"
+  location         : "Denver, CO"
   email            : # "info@mnorris.io"
   links:
     - label: "Email"
